--- a/public/index.html
+++ b/public/index.html
@@ -2,77 +2,133 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>2e-documan | Deep Agent Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2e-documan | Deep Agent V5 Full</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body { background: #0f172a; color: #f8fafc; }
+        body { background: #0f172a; color: #f8fafc; font-family: 'Inter', sans-serif; }
         .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
         .sidebar-item:hover { background: rgba(59, 130, 246, 0.2); border-left: 4px solid #3b82f6; }
+        .tab-content { display: none; }
+        .tab-content.active { display: block; }
+        .chat-bubble { background: rgba(59, 130, 246, 0.1); border: 1px solid rgba(59, 130, 246, 0.2); }
     </style>
 </head>
 <body class="flex h-screen overflow-hidden">
 
-    <aside class="w-64 glass flex flex-col">
-        <div class="p-6 text-2xl font-bold text-blue-500 italic italic">2e-documan</div>
+    <aside class="w-64 glass flex flex-col shadow-2xl">
+        <div class="p-6 text-2xl font-bold text-blue-500 italic flex items-center">
+            <i class="fas fa-robot mr-2"></i> 2e-documan
+        </div>
         <nav class="flex-1 px-4 space-y-2">
-            <a href="#" class="sidebar-item flex items-center p-3 rounded transition" onclick="showTab('analiz')">
-                <i class="fas fa-microchip mr-3"></i> AI Analiz Motoru
+            <a href="#" onclick="showTab('analiz')" class="sidebar-item flex items-center p-3 rounded transition text-gray-300 hover:text-white active">
+                <i class="fas fa-file-pdf mr-3"></i> İşlem Merkezi
             </a>
-            <a href="#" class="sidebar-item flex items-center p-3 rounded transition" onclick="showTab('admin')">
-                <i class="fas fa-user-shield mr-3"></i> Yönetim Paneli
+            <a href="#" onclick="showTab('sohbet')" class="sidebar-item flex items-center p-3 rounded transition text-gray-300 hover:text-white">
+                <i class="fas fa-comments mr-3"></i> Dökümanla Sohbet
             </a>
-            <a href="#" class="sidebar-item flex items-center p-3 rounded transition" onclick="showTab('logs')">
-                <i class="fas fa-history mr-3"></i> İşlem Geçmişi
+            <a href="#" onclick="showTab('admin')" class="sidebar-item flex items-center p-3 rounded transition text-gray-300 hover:text-white">
+                <i class="fas fa-cog mr-3"></i> Yönetim Paneli
             </a>
         </nav>
-        <div class="p-4 glass text-xs text-gray-400">Deep Agent Active v4.0</div>
+        <div class="p-4 glass text-[10px] text-gray-500 text-center">Deep Agent v5.0 | Otonom Mod Aktif</div>
     </aside>
 
-    <main class="flex-1 overflow-y-auto p-8">
+    <main class="flex-1 overflow-y-auto p-8 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-900 via-slate-950 to-black">
         
-        <section id="tab-analiz" class="tab-content">
-            <h1 class="text-3xl font-bold mb-6">Döküman Analiz Merkezi</h1>
-            <div class="glass p-8 rounded-2xl border-dashed border-2 border-blue-500/30 text-center">
-                <i class="fas fa-cloud-upload-alt text-5xl text-blue-500 mb-4"></i>
-                <p class="text-xl mb-4 text-gray-300">PDF dosyasını buraya sürükle veya seç</p>
-                <input type="file" id="pdfInput" class="hidden" accept=".pdf">
-                <button onclick="document.getElementById('pdfInput').click()" class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full font-bold transition">Dökümanı Ateşle</button>
+        <section id="tab-analiz" class="tab-content active">
+            <h1 class="text-3xl font-bold mb-8 italic">Mercedes İşlem Merkezi</h1>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="glass p-10 rounded-3xl border-2 border-dashed border-blue-500/20 text-center">
+                    <i class="fas fa-upload text-5xl text-blue-500 mb-4"></i>
+                    <h2 class="text-xl font-bold mb-4">PDF Yükle</h2>
+                    <input type="file" id="pdfInput" class="hidden" accept=".pdf">
+                    <button onclick="document.getElementById('pdfInput').click()" class="bg-blue-600 hover:bg-blue-700 px-10 py-3 rounded-full font-bold transition">Dosya Seç</button>
+                </div>
+                <div class="glass p-10 rounded-3xl border-2 border-dashed border-purple-500/20 text-center">
+                    <i class="fas fa-stamp text-5xl text-purple-500 mb-4"></i>
+                    <h2 class="text-xl font-bold mb-4">Hızlı İşlem</h2>
+                    <button onclick="applyWatermark()" class="bg-purple-600 hover:bg-purple-700 px-10 py-3 rounded-full font-bold transition">Filigran Bas & İndir</button>
+                </div>
             </div>
-            <div id="result" class="mt-8 glass p-6 rounded-xl hidden"></div>
+            <div id="status" class="mt-6 hidden glass p-4 rounded-xl text-center text-blue-400"></div>
         </section>
 
-        <section id="tab-admin" class="tab-content hidden">
-            <h1 class="text-3xl font-bold mb-6">Sistem Kontrol Merkezi</h1>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
-                <div class="glass p-6 rounded-xl">
-                    <p class="text-gray-400">Toplam Analiz</p>
-                    <h3 class="text-2xl font-bold">1,248</h3>
+        <section id="tab-sohbet" class="tab-content">
+            <h1 class="text-3xl font-bold mb-6 italic text-blue-400">Deep Agent Sohbet</h1>
+            <div class="glass h-[500px] rounded-3xl flex flex-col">
+                <div id="chatBox" class="flex-1 p-6 overflow-y-auto space-y-4">
+                    <div class="chat-bubble p-4 rounded-2xl max-w-[80%]">Baboş hoş geldin! Dökümanı yüklediysen merak ettiğin her şeyi sorabilirsin.</div>
                 </div>
-                <div class="glass p-6 rounded-xl border-l-4 border-green-500">
-                    <p class="text-gray-400">Aktif Kullanıcı</p>
-                    <h3 class="text-2xl font-bold">14</h3>
-                </div>
-                <div class="glass p-6 rounded-xl border-l-4 border-blue-500">
-                    <p class="text-gray-400">Haber Botu Durumu</p>
-                    <h3 class="text-2xl font-bold text-green-400">Aktif</h3>
+                <div class="p-4 border-t border-white/10 flex gap-4">
+                    <input type="text" id="userInput" placeholder="Dökümana bir soru sor..." class="flex-1 bg-slate-900 border border-white/10 p-4 rounded-2xl focus:outline-none focus:border-blue-500 text-white">
+                    <button onclick="askAI()" class="bg-blue-600 px-8 rounded-2xl font-bold hover:bg-blue-700 transition">Sor</button>
                 </div>
             </div>
-            <div class="glass p-6 rounded-xl">
-                <h2 class="text-xl font-bold mb-4">API Güvenlik Ayarları</h2>
-                <input type="password" id="apiKey" placeholder="Gemini API Key" class="w-full bg-slate-800 p-3 rounded border border-gray-700 mb-4">
-                <button class="bg-green-600 px-6 py-2 rounded font-bold">Ayarları Kaydet</button>
+        </section>
+
+        <section id="tab-admin" class="tab-content">
+            <h1 class="text-3xl font-bold mb-6 italic">Sistem Kontrol</h1>
+            <div class="glass p-8 rounded-3xl max-w-xl shadow-2xl">
+                <h2 class="text-xl font-bold mb-6 flex items-center text-yellow-500">
+                    <i class="fas fa-lock mr-3"></i> AI API Güvenlik Duvarı
+                </h2>
+                <input type="password" id="apiKeyInput" placeholder="Gemini API Key" class="w-full bg-slate-900 p-4 rounded-xl border border-white/10 mb-6 text-white focus:outline-none">
+                <button onclick="saveKey()" class="w-full bg-green-600 hover:bg-green-700 py-4 rounded-xl font-bold transition">Anahtarı Kaydet & Kilitle</button>
+                <p id="saveStatus" class="mt-4 text-green-400 text-center font-bold hidden">Sistem Güncellendi!</p>
             </div>
         </section>
 
     </main>
 
     <script>
-        function showTab(tabName) {
-            document.querySelectorAll('.tab-content').forEach(t => t.classList.add('hidden'));
-            document.getElementById('tab-' + tabName).classList.remove('hidden');
+        function showTab(id) {
+            document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
+            document.getElementById('tab-' + id).classList.add('active');
         }
-        // Analiz fonksiyonları buraya gelecek
+
+        function saveKey() {
+            const key = document.getElementById('apiKeyInput').value;
+            localStorage.setItem('gemini_api_key', key);
+            const status = document.getElementById('saveStatus');
+            status.classList.remove('hidden');
+            setTimeout(() => status.classList.add('hidden'), 3000);
+        }
+
+        async function applyWatermark() {
+            const fileInput = document.getElementById('pdfInput');
+            if (fileInput.files.length === 0) return alert("Önce bir PDF seç baboş!");
+            const status = document.getElementById('status');
+            status.innerText = "Mercedes hızlanıyor, filigran basılıyor...";
+            status.classList.remove('hidden');
+            try {
+                const arrayBuffer = await fileInput.files[0].arrayBuffer();
+                const pdfDoc = await PDFLib.PDFDocument.load(arrayBuffer);
+                const pages = pdfDoc.getPages();
+                pages.forEach(page => {
+                    const { width, height } = page.getSize();
+                    page.drawText('2e-documan Deep Agent', {
+                        x: width / 4, y: height / 2, size: 45,
+                        opacity: 0.15, rotate: PDFLib.degrees(45),
+                        color: PDFLib.rgb(0.5, 0.5, 0.5),
+                    });
+                });
+                const pdfBytes = await pdfDoc.save();
+                const blob = new Blob([pdfBytes], { type: 'application/pdf' });
+                const link = document.createElement('a');
+                link.href = URL.createObjectURL(blob);
+                link.download = "2e_analiz_sonuc.pdf";
+                link.click();
+                status.innerText = "Bitti! Dosya hazır.";
+            } catch (e) { alert("Hata: " + e.message); }
+        }
+
+        window.onload = () => {
+            const savedKey = localStorage.getItem('gemini_api_key');
+            if (savedKey) document.getElementById('apiKeyInput').value = savedKey;
+        };
     </script>
 </body>
 </html>
